added image and link

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 
     <div class="footer">
         <a href="https://twitter.com/nathangloverAUS?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @nathangloverAUS</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a class="github-button" href="https://github.com/t04glovern/aws-s3-cat-images" data-size="large" data-show-count="true" aria-label="Star t04glovern/aws-s3-cat-images on GitHub">Star</a><script async defer src="https://buttons.github.io/buttons.js"></script>
     </div>
 </body>
 
